--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ label {
   border: 1px solid var(--main-text-clr);
   padding: .25rem .75rem;
   border-radius: .75rem;
+  font-size: .9rem
 }
 
 label:hover,
