--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,12 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.option-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   border: 1px solid var(--main-text-clr);
   padding: .25rem .75rem;
@@ -110,8 +116,8 @@ label {
   font-size: .9rem
 }
 
-label:hover,
-label:focus {
+.option-button:hover,
+.option-button:focus {
   color: var(--accent-clr);
   border-color: var(--accent-clr);
   box-shadow: 2px 2px 5px var(--accent-clr);
@@ -119,14 +125,14 @@ label:focus {
 }
 
 input[type="radio"] {
-  -webkit-appearance: none;
+ -webkit-appearance: none;
   appearance: none;
   background-color: var(--app-bg-clr);
   margin: 0;
   position: absolute;
 }
 
-label:focus-within {
+input[type="radio"]:checked + .option-button{
   background-color: var(--accent-clr);
   border-color: var(--accent-clr);
   color: var(--app-bg-clr);
